--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     margin: 0px;
+    font-family: 'roboto', sans-serif;
 }
 
 header {
@@ -16,4 +17,19 @@ header {
     text-align: center;
     box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
     padding: 0.3rem;
+    position: relative;
+}
+
+main .place {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    background-color: #f3f3f3;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+main .place i {
+    font-size: 1.5rem;
 }
