--- a/style.scss
+++ b/style.scss
@@ -1,66 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
-
-*, ::before,
-::after {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0px;
-    font-family: 'roboto', sans-serif;
-}
-
-header {
-    font-family: 'Shrikhand', cursive;
-    text-align: center;
-    box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
-    padding: 0.3rem;
-    position: relative;
-}
-
-main .place {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    text-align: center;
-    padding: 0.5rem;
-    background-color: #f3f3f3;
-}
-
-main .place i {
-    font-size: 1.5rem;
-}
-
-.search {
-    text-align: center;
-}
-
-.search h2 {
-    margin-top: 2rem;
-    font-size: 2rem;
-}
-
-.search p {
-    font-size: 1.5rem;
-}
-
-.search button {
-    cursor: pointer;
-    color: white;
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-    margin-top: 1rem;
-    border: none;
-    border-radius: 2rem;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.8);
-    background-image: linear-gradient(to top,rgba(145, 85, 220, 0.9), rgba(255,120, 218, 0.9 ));
-    transition: transform 190ms;
-}
-
-.search button:hover {
-    transform: scale(1.02);
-    opacity: 0.9;
-}
+@import "./sass/base.scss";
+@import "./sass/layout/header.scss";
+@import "./sass/layout/place.scss";
+@import "./sass/layout/search.scss";
