--- a/style.scss
+++ b/style.scss
@@ -2,3 +2,4 @@
 @import "./sass/layout/header.scss";
 @import "./sass/layout/place.scss";
 @import "./sass/layout/search.scss";
+@import "./sass/layout/operation.scss";
