--- a/sass/layout/place.scss
+++ b/sass/layout/place.scss
@@ -5,7 +5,7 @@
     gap: 1rem;
     text-align: center;
     padding: 0.5rem;
-    background-color: #f3f3f3;
+    background-color: #eaeaea;
     & i {
         font-size: 1.5rem;
     }
