--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,4 @@
 @import "./sass/layout/place.scss";
 @import "./sass/layout/search.scss";
 @import "./sass/layout/operation.scss";
+@import "./sass/layout/restaus.scss";
