--- a/sass/layout/restaus.scss
+++ b/sass/layout/restaus.scss
@@ -1,4 +1,5 @@
 @import "../utils/variables.scss";
+@import "../utils/colors.scss";
 
 .menus {
     background-color: #f6f6f6;
@@ -14,14 +15,30 @@
         @media (max-width: $breakpoint) {
             grid-template-columns: repeat(1, 1fr);
         }
+        .new {
+            position: relative;
+        }
+        .new::before {
+            content: "Nouveau";
+            position: absolute;
+            height: 2rem;
+            width: 5rem;
+            background-color: $color-tertiary;
+            color: darken($color-tertiary, 50%);
+            display: grid;
+            place-items: center;
+            right: 1rem;
+            top: 1rem;
+
+        }
     }
 
     .card {
         &__img {
-            background-image: url("../../assets/menu-1.jpg");
-            background-size: cover;
-            height: 15rem;
+            width: 100%;
+            height: 16rem;
             border-radius: 1rem;
+            object-fit: cover;
         }
     }
 }
