--- a/style.css
+++ b/style.css
@@ -127,11 +127,26 @@ header {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+.menus .menus__cards .new {
+  position: relative;
+}
+.menus .menus__cards .new::before {
+  content: "Nouveau";
+  position: absolute;
+  height: 2rem;
+  width: 5rem;
+  background-color: #99e2d0;
+  color: #1b6150;
+  display: grid;
+  place-items: center;
+  right: 1rem;
+  top: 1rem;
+}
 .menus .card__img {
-  background-image: url("../../assets/menu-1.jpg");
-  background-size: cover;
-  height: 15rem;
+  width: 100%;
+  height: 16rem;
   border-radius: 1rem;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
