--- a/sass/base.scss
+++ b/sass/base.scss
@@ -11,3 +11,12 @@ body {
     margin: 0px;
     font-family: 'roboto', sans-serif;
 }
+
+h3, p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
