--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,4 @@
 @import "./sass/layout/search.scss";
 @import "./sass/layout/operation.scss";
 @import "./sass/layout/restaus.scss";
+@import "./sass/layout/footer.scss";
