--- a/sass/layout/restaus.scss
+++ b/sass/layout/restaus.scss
@@ -4,6 +4,7 @@
 .menus {
     background-color: #f6f6f6;
     padding: 2rem;
+    margin-bottom: 2rem;
     h2 {
         margin-bottom: 2rem;
     }
@@ -37,8 +38,27 @@
         &__img {
             width: 100%;
             height: 16rem;
-            border-radius: 1rem;
+            border-radius: 1rem 1rem 0 0;
             object-fit: cover;
+        }
+        &__description {
+            position: relative;
+            background-color: white;
+            border-radius: 0 0 1rem 1rem;
+            h3, p {
+                padding: 0.5rem;
+                padding-left: 1rem;
+            }
+            p {
+                padding-bottom: 1rem;
+            }
+            i {
+                font-size: 2rem;
+                position: absolute;
+                right: 1rem;
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
     }
 }
