--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body {
   font-family: "roboto", sans-serif;
 }
 
+h3, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 header {
   font-family: "Shrikhand", cursive;
   text-align: center;
@@ -113,6 +122,7 @@ header {
 .menus {
   background-color: #f6f6f6;
   padding: 2rem;
+  margin-bottom: 2rem;
 }
 .menus h2 {
   margin-bottom: 2rem;
@@ -145,8 +155,40 @@ header {
 .menus .card__img {
   width: 100%;
   height: 16rem;
-  border-radius: 1rem;
+  border-radius: 1rem 1rem 0 0;
   object-fit: cover;
+}
+.menus .card__description {
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1rem 1rem;
+}
+.menus .card__description h3, .menus .card__description p {
+  padding: 0.5rem;
+  padding-left: 1rem;
+}
+.menus .card__description p {
+  padding-bottom: 1rem;
+}
+.menus .card__description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+footer {
+  padding: 1rem 2rem;
+  color: white;
+  background-color: #353535;
+}
+footer h2 {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: 500;
+}
+footer p {
+  padding: 0.2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
