heart transition + refactoring mixins

--- a/sass/layout/operation.scss
+++ b/sass/layout/operation.scss
@@ -1,5 +1,4 @@
-@import "../utils/hover.scss";
-@import "../utils/box-shadows.scss";
+@import "../utils/mixins.scss";
 @import "../utils/variables.scss";
 @import "../utils/colors.scss";
 
