--- a/sass/layout/restaus.scss
+++ b/sass/layout/restaus.scss
@@ -1,5 +1,6 @@
 @import "../utils/variables.scss";
 @import "../utils/colors.scss";
+@import "../utils/mixins.scss";
 
 .menus {
     background-color: #f6f6f6;
@@ -58,6 +59,17 @@
                 right: 1rem;
                 top: 50%;
                 transform: translateY(-50%);
+            }
+            .fas {
+                color: transparent;
+                background-clip: text;
+                opacity: 0;
+                transition: all 200ms;
+                @include gradient(1);
+            }
+            &:hover .fas {
+                opacity: 1;
+                transform: translateY(-50%) scale(1.1);
             }
         }
     }
