--- a/sass/layout/operation.scss
+++ b/sass/layout/operation.scss
@@ -36,6 +36,7 @@
         background-color: #f6f6f6;
         flex: 1;
         border-radius: 1rem;
+        font-weight: bold;
         @include shadow;
         &:hover {
             @include hover;
