--- a/style.scss
+++ b/style.scss
@@ -5,3 +5,4 @@
 @import "./sass/layout/operation.scss";
 @import "./sass/layout/restaus.scss";
 @import "./sass/layout/footer.scss";
+@import "./sass/pages/restaurants.scss";
