--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header {
   background-color: #f6f6f6;
   flex: 1;
   border-radius: 1rem;
+  font-weight: bold;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.8);
 }
 .operation li::before {
@@ -111,7 +112,11 @@ header {
 .operation li:hover {
   transform: scale(1.02);
   opacity: 0.9;
+  background-color: #f5edff;
   cursor: pointer;
+}
+.operation li:hover i {
+  color: #9356dc;
 }
 .operation li i {
   margin-right: 1rem;
@@ -122,7 +127,6 @@ header {
 .menus {
   background-color: #f6f6f6;
   padding: 2rem;
-  margin-bottom: 2rem;
 }
 .menus h2 {
   margin-bottom: 2rem;
@@ -200,6 +204,10 @@ footer h2 {
 }
 footer p {
   padding: 0.2rem;
+}
+
+img {
+  max-width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
