--- a/sass/base.scss
+++ b/sass/base.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 
-*, ::before,
+*, 
+::before,
 ::after {
     box-sizing: border-box;
 }
@@ -12,7 +13,7 @@ body {
     font-family: 'roboto', sans-serif;
 }
 
-h3, p {
+h1, h2, h3, h4, p {
     margin: 0;
 }
 
