--- a/sass/layout/restaus.scss
+++ b/sass/layout/restaus.scss
@@ -42,29 +42,13 @@
             object-fit: cover;
         }
         &__description {
-            position: relative;
-            background-color: white;
-            border-radius: 0 0 1rem 1rem;
+            @include heart-transition;
             h3, p {
                 padding: 0.5rem;
                 padding-left: 1rem;
             }
             p {
                 padding-bottom: 1rem;
-            }
-            i {
-                font-size: 2rem;
-                position: absolute;
-                right: 1rem;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-            .fas {
-                color: transparent;
-                background-clip: text;
-                opacity: 0;
-                transition: all 200ms;
-                @include gradient(1);
             }
             &:hover .fas {
                 opacity: 1;
