--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -1,3 +1,63 @@
-img {
-    max-width: 100%;
+@import "../utils/mixins.scss";
+@import "../utils/variables.scss";
+@import "../utils/colors.scss";
+
+.photo img {
+    display: block;
+    width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: bottom;
 }
+
+main {
+    background-color: $lightergrey;
+}
+
+.restau__main {
+    padding: 0 1rem;
+}
+
+.restau__title {
+    margin-top: -3rem;
+    h2 {
+    font-family: 'shrikhand', 'cursive';
+    padding: 2rem 1rem;
+    @include heart-transition;
+    border-radius: 2rem 2rem 0 0;
+    background-color: $lightergrey;
+}    
+}
+
+.food {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    background-color: $lightergrey;
+    @media (max-width: $breakpoint) {
+        grid-template-columns: (1fr);
+    }
+    .food__menu {
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 1rem;
+        .food__item {
+            display: flex;
+            &__desc {
+                padding: 1rem;
+            }
+            .food__price {
+                margin-left: auto;
+                font-weight: bold;
+                padding: 1rem;
+                display: flex;
+                align-items: flex-end;
+            }
+            &--check {
+                background-color: $color-tertiary;
+            }
+
+        }
+    }
+}
+
