--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -14,3 +14,40 @@
         color: $purple;
     }
 }
+
+@mixin heart($opacity: 1, $color: inherit, $font-weight: 400) {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-family: "Font Awesome 5 free";
+    font-weight: $font-weight;
+    content: "\f004";
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: $color;
+    background-clip: text;
+    opacity: $opacity;
+    transition: all 200ms;
+}
+
+@mixin heart-transition {
+    position: relative;
+    background-color: white;
+    border-radius: 0 0 1rem 1rem;
+    &::before {
+        @include heart;
+    }
+    &::after {
+        @include heart ($opacity: 0, $color: transparent, $font-weight: 900);
+        @include gradient(1);
+    }
+    &:hover::after {
+        opacity: 1;
+        transform: translateY(-50%) scale(1.15);
+    }
+}
