--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
-*, ::before,
+*,
+::before,
 ::after {
   box-sizing: border-box;
 }
@@ -10,7 +11,7 @@ body {
   font-family: "roboto", sans-serif;
 }
 
-h3, p {
+h1, h2, h3, h4, p {
   margin: 0;
 }
 
@@ -167,26 +168,55 @@ header {
   background-color: white;
   border-radius: 0 0 1rem 1rem;
 }
+.menus .card__description::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+  background-clip: text;
+  opacity: 1;
+  transition: all 200ms;
+}
+.menus .card__description::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 900;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: transparent;
+  background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+  background-image: linear-gradient(to top, #9155dc, #ff78da);
+}
+.menus .card__description:hover::after {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.15);
+}
 .menus .card__description h3, .menus .card__description p {
   padding: 0.5rem;
   padding-left: 1rem;
 }
 .menus .card__description p {
   padding-bottom: 1rem;
-}
-.menus .card__description i {
-  font-size: 2rem;
-  position: absolute;
-  right: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.menus .card__description .fas {
-  color: transparent;
-  background-clip: text;
-  opacity: 0;
-  transition: all 200ms;
-  background-image: linear-gradient(to top, #9155dc, #ff78da);
 }
 .menus .card__description:hover .fas {
   opacity: 1;
@@ -206,8 +236,109 @@ footer p {
   padding: 0.2rem;
 }
 
-img {
-  max-width: 100%;
+.photo img {
+  display: block;
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+main {
+  background-color: #f6f6f6;
+}
+
+.restau__main {
+  padding: 0 1rem;
+}
+
+.restau__title {
+  margin-top: -3rem;
+}
+.restau__title h2 {
+  font-family: "shrikhand", "cursive";
+  padding: 2rem 1rem;
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1rem 1rem;
+  border-radius: 2rem 2rem 0 0;
+  background-color: #f6f6f6;
+}
+.restau__title h2::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+  background-clip: text;
+  opacity: 1;
+  transition: all 200ms;
+}
+.restau__title h2::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 900;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: transparent;
+  background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+  background-image: linear-gradient(to top, #9155dc, #ff78da);
+}
+.restau__title h2:hover::after {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.15);
+}
+
+.food {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  background-color: #f6f6f6;
+}
+@media (max-width: 1000px) {
+  .food {
+    grid-template-columns: 1fr;
+  }
+}
+.food .food__menu {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 1rem;
+}
+.food .food__menu .food__item {
+  display: flex;
+}
+.food .food__menu .food__item__desc {
+  padding: 1rem;
+}
+.food .food__menu .food__item .food__price {
+  margin-left: auto;
+  font-weight: bold;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-end;
+}
+.food .food__menu .food__item--check {
+  background-color: #99e2d0;
 }
 
 /*# sourceMappingURL=style.css.map */
