--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -1,6 +1,7 @@
 @import "../utils/mixins.scss";
 @import "../utils/variables.scss";
 @import "../utils/colors.scss";
+@import "../utils/animations.scss";
 
 .photo img {
     display: block;
@@ -38,13 +39,22 @@ main {
         grid-template-columns: (1fr);
     }
     .food__menu {
-        border: 1px solid black;
-        background-color: white;
-        border-radius: 1rem;
+        overflow: hidden;
         .food__item {
             display: flex;
+            overflow: hidden;
+            border-radius: 1rem;
+            background-color: white;
+            margin: 0.5rem;
+            @include shadow;
             &__desc {
                 padding: 1rem;
+                overflow: hidden;
+                h4, p {
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
             }
             .food__price {
                 margin-left: auto;
@@ -54,7 +64,32 @@ main {
                 align-items: flex-end;
             }
             &--check {
+                display: grid;
+                place-items: center;
+                flex-shrink: 0;
+                $check-width: 4rem;
+                border-radius: 0 1rem 1rem 0;
                 background-color: $color-tertiary;
+                margin-right: -$check-width;
+                width: $check-width;
+                transition: margin-right 0.5s;
+                i {
+                    display: grid;
+                    place-items: center;
+                    background: white;
+                    aspect-ratio: 1;
+                    width: 2rem;
+                    border-radius: 1rem;
+                    color: $color-tertiary;
+                }
+            }
+            &:hover {
+                .food__item--check  {
+                    margin-right: 0;
+                }
+                i {
+                    animation: quarter-spin 0.5s ease-in-out;
+                }
             }
 
         }
