--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -3,7 +3,7 @@
 }
 
 @mixin shadow {
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.8);
+    box-shadow: 0px 4px 6px 1px rgba(0,0,0,0.4);
 }
 
 @mixin hover {
