--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -5,7 +5,7 @@ footer {
     color: white;
     background-color: $darkgrey;
     h2 {
-        font-family: 'Shrikhand', sans-serif;
+        font-family: 'Shrikhand', 'sans-serif';
         font-weight: 500;
     }
     p {
