--- a/sass/layout/search.scss
+++ b/sass/layout/search.scss
@@ -13,20 +13,7 @@
     font-size: 1.5rem;
 }
 & button {
-    cursor: pointer;
-    color: white;
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-    margin-top: 1rem;
-    border: none;
-    border-radius: 2rem;
-    transition: transform 190ms;
-    @include gradient(0.9);
-    @include shadow;
-}
-& button:hover {
-    transform: scale(1.02);
-    opacity: 0.9;
+    @include base-button;
 }
 }
 
