--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -3,12 +3,27 @@
 @import "../utils/colors.scss";
 @import "../utils/animations.scss";
 
+.page__restau {
+
+
+
+header::before {
+    @include font-awesome($font-weight: 900);
+    content:"\f060";
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
 .photo img {
     display: block;
     width: 100%;
-    max-height: 100%;
+    height: 70vh;
     object-fit: cover;
-    object-position: bottom;
+    object-position: center; 
+    @media (max-width: $breakpoint) {
+        height: auto;
+    }     
 }
 
 main {
@@ -37,6 +52,21 @@ main {
     background-color: $lightergrey;
     @media (max-width: $breakpoint) {
         grid-template-columns: (1fr);
+    }
+    h3 {
+        text-transform: uppercase;
+        font-weight: 300;
+        position: relative;
+        &::after {
+            content:"";
+            position: absolute;
+            top: 1.5rem;
+            left: 0;
+            height: 0.25rem;
+            width: 3rem;
+            background-color: $color-tertiary;
+            
+        }
     }
     .food__menu {
         overflow: hidden;
@@ -84,6 +114,7 @@ main {
                 }
             }
             &:hover {
+                cursor: pointer;
                 .food__item--check  {
                     margin-right: 0;
                 }
@@ -94,5 +125,16 @@ main {
 
         }
     }
+}
+
+section.order {
+    height: 15vh;
+    display: grid;
+    place-items: center;
+    button {
+        @include base-button;
+    }
+}
+
 }
 
