--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -1,9 +1,11 @@
+@import "./colors.scss";
+
 @mixin gradient($opacity: 0.9) {
     background-image: linear-gradient(to top,rgba(145, 85, 220, $opacity), rgba(255,120, 218, $opacity));
 }
 
 @mixin shadow {
-    box-shadow: 0px 4px 6px 1px rgba(0,0,0,0.4);
+    box-shadow: 2px 1px 8px -3px $lightgrey;
 }
 
 @mixin hover {
@@ -15,7 +17,7 @@
     }
 }
 
-@mixin heart($opacity: 1, $color: inherit, $font-weight: 400) {
+@mixin font-awesome($font-weight: 400) {
     display: inline-block;
     font-style: normal;
     font-variant: normal;
@@ -23,9 +25,13 @@
     -webkit-font-smoothing: antialiased;
     font-family: "Font Awesome 5 free";
     font-weight: $font-weight;
+    position: absolute;
+}
+
+@mixin heart($opacity: 1, $color: inherit, $font-weight: 400) {
+    @include font-awesome($font-weight);
     content: "\f004";
     font-size: 2rem;
-    position: absolute;
     right: 1rem;
     top: 50%;
     transform: translateY(-50%);
@@ -49,5 +55,22 @@
     &:hover::after {
         opacity: 1;
         transform: translateY(-50%) scale(1.15);
+    }
+}
+
+@mixin base-button {
+    cursor: pointer;
+    color: white;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+    border: none;
+    border-radius: 2rem;
+    transition: transform 190ms;
+    @include gradient(0.9);
+    @include shadow;
+    &:hover {
+        transform: scale(1.02);
+        opacity: 0.9;
     }
 }
