opti responsive et animation fleche retour

--- a/sass/layout/operation.scss
+++ b/sass/layout/operation.scss
@@ -39,7 +39,7 @@
         font-weight: bold;
         @include shadow;
         &:hover {
-            @include hover;
+            @include op-hover;
             cursor: pointer;
         }
         & i {
