--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,12 +1,13 @@
 @import "./../utils/colors.scss";
 
 footer {
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     color: white;
     background-color: $darkgrey;
     h2 {
         font-family: 'Shrikhand', 'sans-serif';
         font-weight: 500;
+        padding-bottom: inherit;
     }
     p {
         padding: 0.2rem;
