--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -6,15 +6,22 @@
 .page__restau {
 
 
+header {
+    &::before {
+        @include font-awesome($font-weight: 900);
+        content:"\f060";
+        left: 1rem;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 20px;
+        transition: transform 200ms;
+    }
+    &:hover::before {
+        @include arrow-hover($scaling: 1.2, $transformation: translateY(-50%));
+    }
 
-header::before {
-    @include font-awesome($font-weight: 900);
-    content:"\f060";
-    left: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
 }
+
 .photo img {
     display: block;
     width: 100%;
@@ -57,6 +64,7 @@ main {
         text-transform: uppercase;
         font-weight: 300;
         position: relative;
+        padding-bottom: 1rem;
         &::after {
             content:"";
             position: absolute;
@@ -75,7 +83,7 @@ main {
             overflow: hidden;
             border-radius: 1rem;
             background-color: white;
-            margin: 0.5rem;
+            margin: 0.5rem 0.5rem 0.5rem 0;
             @include shadow;
             &__desc {
                 padding: 1rem;
