--- a/style.css
+++ b/style.css
@@ -157,10 +157,14 @@ header {
   right: 1rem;
   top: 1rem;
 }
+.menus .card {
+  box-shadow: 2px 1px 8px -3px #7e7e7e;
+  border-radius: 1rem 1rem 0 0;
+}
 .menus .card__img {
   width: 100%;
   height: 16rem;
-  border-radius: 1rem 1rem 0 0;
+  border-radius: inherit;
   object-fit: cover;
 }
 .menus .card__description {
@@ -224,13 +228,14 @@ header {
 }
 
 footer {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   color: white;
   background-color: #353535;
 }
 footer h2 {
   font-family: "Shrikhand", "sans-serif";
   font-weight: 500;
+  padding-bottom: inherit;
 }
 footer p {
   padding: 0.2rem;
@@ -258,6 +263,10 @@ footer p {
   top: 50%;
   transform: translateY(-50%);
   font-size: 20px;
+  transition: transform 200ms;
+}
+.page__restau header:hover::before {
+  transform: translateY(-50%) scale(1.2);
 }
 .page__restau .photo img {
   display: block;
@@ -347,6 +356,7 @@ footer p {
   text-transform: uppercase;
   font-weight: 300;
   position: relative;
+  padding-bottom: 1rem;
 }
 .page__restau .food h3::after {
   content: "";
@@ -365,7 +375,7 @@ footer p {
   overflow: hidden;
   border-radius: 1rem;
   background-color: white;
-  margin: 0.5rem;
+  margin: 0.5rem 0.5rem 0.5rem 0;
   box-shadow: 2px 1px 8px -3px #7e7e7e;
 }
 .page__restau .food .food__menu .food__item__desc {
