--- a/sass/layout/search.scss
+++ b/sass/layout/search.scss
@@ -1,19 +1,109 @@
 @import "../utils/mixins.scss";
+@import "../utils/colors.scss";
+@import "../utils/animations.scss";
 
 
 .search {
     text-align: center;
-    background-color: #f2f2f2;
+    background-color: $whitelight;
     padding: 2rem;
 & h2 {
     margin: auto;
     font-size: 2rem;
+    padding: 0.5rem;
 }
 & p {
     font-size: 1.5rem;
+    padding: 0.5rem;
 }
 & button {
     @include base-button;
 }
 }
+
+
+.loader {
+    position: fixed;
+    background-color: $color-tertiary;
+    inset: 0;
+    height: 100vh;
+    z-index: 1;
+    opacity: 0.8;
+    animation: ghost 3s forwards;
+    transform-origin: top;
+
+    div {
+        position: absolute;
+        top: 0; right: 0; bottom: 0; left: 0;
+        height: 300px;
+        font-size: 20px;
+        font-family: arial;
+        width: 300px;
+        margin: auto auto;
+        border-radius: 50%;
+        border-right: 9px solid rgba(0,0,0,0.8);
+        animation: spinning 10s linear infinite;
+        div {
+            position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0;
+            height: 250px;
+            font-size: 20px;
+            font-family: arial;
+            width: 250px;
+            margin: auto auto;
+            border-radius: 50%;
+            border-right: 9px solid rgba(0,0,0,0.8);
+            animation: spinning 10s linear infinite;
+            div {
+                position: absolute;
+                top: 0; right: 0; bottom: 0; left: 0;
+                height: 200px;
+                font-size: 20px;
+                font-family: arial;
+                width: 200px;
+                margin: auto auto;
+                border-radius: 50%;
+                border-right: 9px solid rgba(0,0,0,0.8);
+                animation: spinning 10s linear infinite;
+                div {
+                    position: absolute;
+                    top: 0; right: 0; bottom: 0; left: 0;
+                    height: 150px;
+                    font-size: 20px;
+                    font-family: arial;
+                    width: 150px;
+                    margin: auto auto;
+                    border-radius: 50%;
+                    border-right: 9px solid rgba(0,0,0,0.8);
+                    animation: spinning 10s linear infinite;
+                    div {
+                        position: absolute;
+                        top: 0; right: 0; bottom: 0; left: 0;
+                        height: 100px;
+                        font-size: 20px;
+                        font-family: arial;
+                        width: 100px;
+                        margin: auto auto;
+                        border-radius: 50%;
+                        border-right: 9px solid rgba(0,0,0,0.8);
+                        animation: spinning 10s linear infinite;
+                        div {
+                            position: absolute;
+                            top: 0; right: 0; bottom: 0; left: 0;
+                            height: 50px;
+                            font-size: 20px;
+                            font-family: arial;
+                            width: 50px;
+                            margin: auto auto;
+                            border-radius: 50%;
+                            border-right: 9px solid rgba(0,0,0,0.8);
+                            animation: spinning 10s linear infinite;
+                        }
+                    }
+                }
+            }
+        }
+      }
+}
+
 
