--- a/sass/utils/animations.scss
+++ b/sass/utils/animations.scss
@@ -6,3 +6,53 @@
         transform: rotate(0);
     }
 }
+
+@keyframes opening {
+    0% {
+        transform: translateY(50%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes ghost {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes spinning {
+    0% {
+      transform: rotate(0deg);
+      border-right: 9px solid rgba(0,0,0,0.6);
+    }
+    5% {border-right-color: rgba(0,0,0,0.4)}
+    10% {border-right-color: rgba(0,0,0,0.6)}
+    15% {border-right-color: rgba(0,0,0,0.4)}
+    20% {border-right-color: rgba(0,0,0,0.6)}
+    25% {border-right-color: rgba(0,0,0,0.4)}
+    30% {border-right-color: rgba(0,0,0,0.6)}
+    35% {border-right-color: rgba(0,0,0,0.4)}
+    40% {border-right-color: rgba(0,0,0,0.6)}
+    45% {border-right-color: rgba(0,0,0,0.4)}
+    50% {border-right-color: rgba(0,0,0,0.6)}
+    55% {border-right-color: rgba(0,0,0,0.4)}
+    60% {border-right-color: rgba(0,0,0,0.6)}
+    65% {border-right-color: rgba(0,0,0,0.4)}
+    70% {border-right-color: rgba(0,0,0,0.6)}
+    75% {border-right-color: rgba(0,0,0,0.4)}
+    80% {border-right-color: rgba(0,0,0,0.6)}
+    85% {border-right-color: rgba(0,0,0,0.4)}
+    90% {border-right-color: rgba(0,0,0,0.6)}
+    95% {border-right-color: rgba(0,0,0,0.4)}
+    100% {
+      transform: rotate(360deg);
+      border-right: 9px solid rgba(0,0,0,0.6);
+    }
+  }
