--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -123,7 +123,7 @@ main {
                     display: grid;
                     place-items: center;
                     background: white;
-                    aspect-ratio: 1;
+                    height: 2rem;
                     width: 2rem;
                     border-radius: 1rem;
                     color: $color-tertiary;
