--- a/sass/utils/colors.scss
+++ b/sass/utils/colors.scss
@@ -1,6 +1,7 @@
 $whitelight: #f2f2f2;
 $lightgrey: #7e7e7e;
 $lightergrey: #f6f6f6;
-$purple: #9356dc;
+$color-primary: #9356dc;
+$color-secondary: #FF79DA;
 $color-tertiary: #99e2d0;
 $darkgrey: #353535;
