--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -13,7 +13,7 @@
     opacity: 0.9;
     background-color: #f5edff;
     & i {
-        color: $purple;
+        color: $color-primary;
     }
 }
 
@@ -42,7 +42,7 @@
     color: $color;
     background-clip: text;
     opacity: $opacity;
-    transition: all 200ms;
+    transition: all 300ms;
 }
 
 @mixin heart-transition {
@@ -77,4 +77,13 @@
         transform: scale(1.02);
         opacity: 0.9;
     }
+}
+
+@mixin loaderspin {
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    border-radius: 50%;
+    border-right: 9px solid black;
+    animation: spinning 10s linear infinite;
 }
