--- a/style.css
+++ b/style.css
@@ -70,68 +70,68 @@ header {
 @keyframes spinning {
   0% {
     transform: rotate(0deg);
-    border-right: 9px solid rgba(0, 0, 0, 0.6);
+    border-right: 9px solid #9356dc;
   }
   5% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   10% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   15% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   20% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   25% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   30% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   35% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   40% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   45% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   50% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   55% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   60% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   65% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   70% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   75% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   80% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   85% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   90% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   95% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   100% {
     transform: rotate(360deg);
-    border-right: 9px solid rgba(0, 0, 0, 0.6);
+    border-right: 9px solid #9356dc;
   }
 }
 .search {
@@ -167,103 +167,72 @@ header {
 
 .loader {
   position: fixed;
-  background-color: #99e2d0;
+  background-color: #f6f6f6;
   inset: 0;
   height: 100vh;
   z-index: 1;
-  opacity: 0.8;
-  animation: ghost 3s forwards;
-  transform-origin: top;
+  opacity: 0.9;
+  animation: ghost 10ms 3s forwards;
 }
 .loader div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 300px;
-  font-size: 20px;
-  font-family: arial;
-  width: 300px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 300px;
+  width: 300px;
 }
 .loader div div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 250px;
-  font-size: 20px;
-  font-family: arial;
-  width: 250px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 250px;
+  width: 250px;
 }
 .loader div div div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 200px;
-  font-size: 20px;
-  font-family: arial;
-  width: 200px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 200px;
+  width: 200px;
 }
 .loader div div div div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 150px;
-  font-size: 20px;
-  font-family: arial;
-  width: 150px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 150px;
+  width: 150px;
 }
 .loader div div div div div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 100px;
-  font-size: 20px;
-  font-family: arial;
-  width: 100px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 100px;
+  width: 100px;
 }
 .loader div div div div div div {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 50px;
-  font-size: 20px;
-  font-family: arial;
-  width: 50px;
-  margin: auto auto;
+  inset: 0;
+  margin: auto;
   border-radius: 50%;
-  border-right: 9px solid rgba(0, 0, 0, 0.8);
+  border-right: 9px solid black;
   animation: spinning 10s linear infinite;
+  height: 50px;
+  width: 50px;
 }
 
 .operation {
@@ -385,7 +354,7 @@ header {
   color: inherit;
   background-clip: text;
   opacity: 1;
-  transition: all 200ms;
+  transition: all 300ms;
 }
 .menus .card__description::after {
   display: inline-block;
@@ -404,7 +373,7 @@ header {
   color: transparent;
   background-clip: text;
   opacity: 0;
-  transition: all 200ms;
+  transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
 }
 .menus .card__description:hover::after {
@@ -467,68 +436,68 @@ footer p {
 @keyframes spinning {
   0% {
     transform: rotate(0deg);
-    border-right: 9px solid rgba(0, 0, 0, 0.6);
+    border-right: 9px solid #9356dc;
   }
   5% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   10% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   15% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   20% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   25% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   30% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   35% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   40% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   45% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   50% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   55% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   60% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   65% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   70% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   75% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   80% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   85% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   90% {
-    border-right-color: rgba(0, 0, 0, 0.6);
+    border-right-color: #9356dc;
   }
   95% {
-    border-right-color: rgba(0, 0, 0, 0.4);
+    border-right-color: #FF79DA;
   }
   100% {
     transform: rotate(360deg);
-    border-right: 9px solid rgba(0, 0, 0, 0.6);
+    border-right: 9px solid #9356dc;
   }
 }
 .page__restau header::before {
@@ -597,7 +566,7 @@ footer p {
   color: inherit;
   background-clip: text;
   opacity: 1;
-  transition: all 200ms;
+  transition: all 300ms;
 }
 .page__restau .restau__title h2::after {
   display: inline-block;
@@ -616,7 +585,7 @@ footer p {
   color: transparent;
   background-clip: text;
   opacity: 0;
-  transition: all 200ms;
+  transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
 }
 .page__restau .restau__title h2:hover::after {
@@ -701,7 +670,7 @@ footer p {
   display: grid;
   place-items: center;
   background: white;
-  aspect-ratio: 1;
+  height: 2rem;
   width: 2rem;
   border-radius: 1rem;
   color: #99e2d0;
