--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ header {
 .search button:hover {
   transform: scale(1.02);
   opacity: 0.9;
+  box-shadow: 5px 6px 6px -4px #353535;
 }
 
 .loader {
@@ -172,7 +173,7 @@ header {
   height: 100vh;
   z-index: 1;
   opacity: 0.9;
-  animation: ghost 10ms 3s forwards;
+  animation: ghost 10ms 2.5s forwards;
 }
 .loader div {
   position: absolute;
@@ -333,11 +334,25 @@ header {
   object-fit: cover;
 }
 .menus .card__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+.menus .card__description .card__text {
+  padding: 0.5rem;
+  padding-left: 1rem;
+  padding-bottom: inherit;
+}
+.menus .card__description p {
+  padding-top: 0.5rem;
+}
+.menus .card__description .like {
   position: relative;
   background-color: white;
   border-radius: 0 0 1rem 1rem;
 }
-.menus .card__description::before {
+.menus .card__description .like::before {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -356,7 +371,7 @@ header {
   opacity: 1;
   transition: all 300ms;
 }
-.menus .card__description::after {
+.menus .card__description .like::after {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -376,25 +391,17 @@ header {
   transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
 }
-.menus .card__description:hover::after {
+.menus .card__description .like:hover::after {
   opacity: 1;
   transform: translateY(-50%) scale(1.15);
 }
-.menus .card__description h3, .menus .card__description p {
-  padding: 0.5rem;
-  padding-left: 1rem;
-  padding-bottom: inherit;
-}
-.menus .card__description p {
-  padding-bottom: 1rem;
-}
-.menus .card__description:hover .fas {
+.menus .card__description .like:hover .fas {
   opacity: 1;
   transform: translateY(-50%) scale(1.1);
 }
 
 footer {
-  padding: 1rem 1rem;
+  padding: 1rem 1.5rem;
   color: white;
   background-color: #353535;
 }
@@ -535,21 +542,17 @@ footer p {
   background-color: #f6f6f6;
 }
 .page__restau .restau__main {
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 }
 .page__restau .restau__title {
   margin-top: -3rem;
-}
-.page__restau .restau__title h2 {
-  font-family: "shrikhand", "cursive";
-  padding: 2rem 1rem;
   position: relative;
   background-color: white;
   border-radius: 0 0 1rem 1rem;
   border-radius: 2rem 2rem 0 0;
   background-color: #f6f6f6;
 }
-.page__restau .restau__title h2::before {
+.page__restau .restau__title::before {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -568,7 +571,7 @@ footer p {
   opacity: 1;
   transition: all 300ms;
 }
-.page__restau .restau__title h2::after {
+.page__restau .restau__title::after {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -588,9 +591,13 @@ footer p {
   transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
 }
-.page__restau .restau__title h2:hover::after {
+.page__restau .restau__title:hover::after {
   opacity: 1;
   transform: translateY(-50%) scale(1.15);
+}
+.page__restau .restau__title h2 {
+  font-family: "shrikhand", "cursive";
+  padding: 2rem 1.5rem;
 }
 .page__restau .food {
   display: grid;
@@ -704,6 +711,7 @@ footer p {
 .page__restau section.order button:hover {
   transform: scale(1.02);
   opacity: 0.9;
+  box-shadow: 5px 6px 6px -4px #353535;
 }
 
 /*# sourceMappingURL=style.css.map */
