--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ header {
   top: 50%;
   transform: translateY(-50%);
   color: inherit;
-  background-clip: text;
+  -webkit-background-clip: text;
   opacity: 1;
   transition: all 300ms;
 }
@@ -386,7 +386,7 @@ header {
   top: 50%;
   transform: translateY(-50%);
   color: transparent;
-  background-clip: text;
+  -webkit-background-clip: text;
   opacity: 0;
   transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
@@ -567,7 +567,7 @@ footer p {
   top: 50%;
   transform: translateY(-50%);
   color: inherit;
-  background-clip: text;
+  -webkit-background-clip: text;
   opacity: 1;
   transition: all 300ms;
 }
@@ -586,7 +586,7 @@ footer p {
   top: 50%;
   transform: translateY(-50%);
   color: transparent;
-  background-clip: text;
+  -webkit-background-clip: text;
   opacity: 0;
   transition: all 300ms;
   background-image: linear-gradient(to top, #9155dc, #ff78da);
